--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 packaging==24.0
+psycopg2==2.9.9
 pyodbc==5.1.0
 SQLAlchemy==2.0.27
 typing_extensions==4.10.0
